--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend Mentor | Fylo data storage component</title>
   </head>
-  <body>
+  <body style="background-color: hsl(229, 57%, 11%)">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
